# dotconfig

./: .gitignore  Makefile.am  README.md  args.c  args.h  config.c  config.h  configure.ac  dotconfig  dotconfig.h.in  main.c
.github/workflows/: c-cpp.yml
src/: Makefile.am  config.c  config.h  ini.c  ini.h  main.c  stringarr.c  stringarr.h
test/: Makefile.am  check_config.c
